tests/build/widget_new/missing_arg1.stderr
error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> $DIR/missing_arg1.rs:7:31
    |
7   |         background_gradient = 0.deg(), ;
    |                               ^------
    |                               |
    |                               supplied 1 argument
    |                               expected 2 arguments
    |
note: associated function defined here
   --> $DIR/visual.rs:119:1
    |
119 | / #[property(inner, default(0.deg(), {
120 | |     let c = colors::BLACK.transparent();
121 | |     crate::core::gradient::stops![c, c]
122 | | }))]
    | |____^
    = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
